# dmg2nix

./: Cargo.toml  README.md  dmg2nix.nix
src/: main.old  main.rs  write.rs
