[package]
name = "dmg2nix"
version = "0.1.0"
edition = "2021"
author = "ArkieSoft"
repository = "https://github.com/ArkieSoft/dmg2nix"
license = "GPL 3.0 or Later"
description = "A wrapper that takes a download link for a dmg archive and generates a .nix file derivative"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dmg = "0.1.2"
download_rs = "0.2.0"
glob = "0.3.1"
